# logtractor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  conanfile.txt  logtractor.cpp  logtractor.example.yml
src/: appender.cpp  appender.hpp  config.cpp  config.hpp  logger.hpp  message.hpp  source.cpp  source.hpp
src/appenders/: appender_file.cpp  appender_file.hpp
src/services/: logtractor_service.cpp  logtractor_service.hpp
src/sources/: source_udp.cpp  source_udp.hpp
